--- a/module-1/task-1.4.1.html
+++ b/module-1/task-1.4.1.html
@@ -8,8 +8,27 @@
 <body>
 
   <!-- YOUR CODE GOES BELOW HERE -->
+  CPD - Continuing Professional Development
 
 
+  Date of CPD activity
+  13/01/2021
+  
+  CPD activity
+  Introduction to Web Development
+  
+  
+  What have I learnt?
+  GitHub, Resource Tools, GitHub Desktop, Websites, Video Guides
+  test
+  
+  How did I use this in practice?
+  Improving my knowledge
+  
+  
+  What did I find hard?
+  Non so far
+  
   <!-- YOUR CODE GOES ABOVE HERE -->
   
 </body>
