--- a/module-1/task-1.4.1.html
+++ b/module-1/task-1.4.1.html
@@ -8,15 +8,13 @@
 <body>
 
   <!-- YOUR CODE GOES BELOW HERE -->
-  CPD - Continuing Professional Development
+  <h1>CPD - Continuing Professional Development</h1>
 
-
-  Date of CPD activity
-  13/01/2021
+  <h2>Date of CPD activity</h2>
+  <h2>13/01/2021</h2>
   
-  CPD activity
-  Introduction to Web Development
-  
+  <h3>CPD activity</h3>
+  <h3>Introduction to Web Development</h3>
   
   What have I learnt?
   GitHub, Resource Tools, GitHub Desktop, Websites, Video Guides
@@ -28,7 +26,7 @@
   
   What did I find hard?
   Non so far
-  
+
   <!-- YOUR CODE GOES ABOVE HERE -->
   
 </body>
