--- a/module-1/task-1.4.1.html
+++ b/module-1/task-1.4.1.html
@@ -16,16 +16,16 @@
   <h3>CPD activity</h3>
   <h3>Introduction to Web Development</h3>
   
-  What have I learnt?
-  GitHub, Resource Tools, GitHub Desktop, Websites, Video Guides
-  test
+  <h3>What have I learnt?</h3>
+  <p>GitHub, Resource Tools, GitHub Desktop, Websites, Video Guides
+  test</p>
   
-  How did I use this in practice?
-  Improving my knowledge
+  <h3>How did I use this in practice?</h3>
+  <p>Improving my knowledge</p>
   
   
-  What did I find hard?
-  Non so far
+  <h3>What did I find hard?</h3>
+  <p>Non so far</p>
 
   <!-- YOUR CODE GOES ABOVE HERE -->
   
