--- a/module-2/lesson-1/task-2.1.3.html
+++ b/module-2/lesson-1/task-2.1.3.html
@@ -1,19 +1,23 @@
 <!-- CODE GOES BELOW HERE -->
-
-<!-- CODE GOES ABOVE HERE -->
-
-<!-- 
-  /** TASK 2.1.3 **/
-
-  1. Set up your document using the following:
-    doctype, head, title and body tags
-  
-  2. Add one of each level of heading and 1-2 short paragraphs of text below each heading
-
-  3. Use <strong> and <em> within a few paragraphs
-
-  4. Commit your changes
-
-  5. Push your changes to remote
-
- -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>task 2.1.3</title>
+</head>
+<body>
+  <h1>Heading 1</h1>
+  <p>asdasdsd <strong> HTML</strong> asda<strong>asdas</strong> wasdasdas.</p>
+  <h2>Heading 2</h2>
+  <p>This iasdasdt showing how <strong> HTML</strong> and <strong>CSS</strong> work toasdasructure and presentation layer to content.</p>
+  <h3>Heading 3</h3>
+  <p>This asdadwing how <strong> HTML</strong> and <strong>CSS</strong> work together to apply stasdasdsentation layer to content.</p>
+  <h4>Heading 4</h4>
+  <p>This asdadis example text showing how <strong> HTML</strong> and <strong>CSS</strong> work together to apply structure and presentation layer to content.</p>
+  <h5>Heading 5</h5>
+  <p>This asdatext showing how <strong> HTML</strong> and <strong>CSS</strong> work together toasdare and presentation layer to content.</p>
+  <h6>Heading 6</h6>
+  <p>This iasdasg how <strong> HTML</strong> and <strong>CSS</strong> work together to apply strasdas presentation layer to content.</p> 
+</body>
+</html>
