--- a/module-2/lesson-1/task-2.1.4.html
+++ b/module-2/lesson-1/task-2.1.4.html
@@ -1,20 +1,16 @@
 <!-- CODE GOES BELOW HERE -->
-
-<!-- CODE GOES ABOVE HERE -->
-
-<!-- 
-  /** TASK 2.1.4 **/
-
-  1. Set up your document using the following:
-    doctype, head, title and body tags
-  
-  2. Add some anchor tags (Links) to your document
-     - One link should open in the same window
-     - One link should open in a new tab / window
-     - One link should open your email client
-
-  3. Commit your changes
-
-  4. Push your changes to remote
-
- -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+   <a href="#" title="new window for this page2 " target="_blank">New Page</a>
+   <br>
+   <a href="https://www.google.co.uk/" title="google">Google</a>
+   <br>
+   <a href="mailto:jonwon30@hotmail.co.uk" title="hotmail account">Hotmail Account</a>
+</body>
+</html>
