--- a/module-2/lesson-1/task-2.1.4.html
+++ b/module-2/lesson-1/task-2.1.4.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>task 2.1.4</title>
 </head>
 <body>
    <a href="#" title="new window for this page2 " target="_blank">New Page</a>
