--- a/module-2/lesson-1/task-2.1.4.html
+++ b/module-2/lesson-1/task-2.1.4.html
@@ -9,6 +9,8 @@
 <body>
    <a href="#" title="new window for this page2 " target="_blank">New Page</a>
    <br>
+   <a href="https://www.google.co.uk/" title="google" target="_blank">Google</a>
+   <br>
    <a href="https://www.google.co.uk/" title="google">Google</a>
    <br>
    <a href="mailto:jonwon30@hotmail.co.uk" title="hotmail account">Hotmail Account</a>
