--- a/module-2/lesson-1/task-2.1.5.html
+++ b/module-2/lesson-1/task-2.1.5.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>task 2.1.5</title>
+</head>
+<body>
+  <img src="https://cdn.pixabay.com/photo/2015/03/26/09/47/sky-690293_960_720.jpg" alt="Leeds Trinity Logo">
+
+  <br>
+
+  <a href="https://pixabay.com/" title="sky image" target="_blank"><img src="https://cdn.pixabay.com/photo/2013/08/20/15/47/poppies-174276_960_720.jpg" alt="Pixalbay free images royalty free"></a>
+  
+</body>
+</html>
+
 <!-- CODE GOES BELOW HERE -->
 
 <!-- CODE GOES ABOVE HERE -->
