--- a/module-2/lesson-1/task-2.1.6.html
+++ b/module-2/lesson-1/task-2.1.6.html
@@ -1,7 +1,33 @@
-<!-- CODE GOES BELOW HERE -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>task 2.1.6</title>
+</head>
+<body>
 
-<!-- CODE GOES ABOVE HERE -->
+<style>
 
+ li {
+  list-style-type: upper-alpha;
+}
+</style>
+
+
+  <ul>
+    <li>apple</li>
+    <li>banana</li>
+    <li>orange</li>
+  </ul>
+
+  <ol>
+    <li><img src="/images/leeds-trinity-logo.png" alt="test"></li>
+      <li><a href="https://www.google.co.uk/"><img src="/images/leeds-trinity-logo.png" alt="test"></li></a>
+    <li><img src="/images/leeds-trinity-logo.png" alt="test"></li>
+  </ol>
+</body>
+</html>
 <!-- 
   /** TASK 2.1.6 **/
 
