--- a/module-2/lesson-1/task-2.1.1.html
+++ b/module-2/lesson-1/task-2.1.1.html
@@ -13,5 +13,11 @@
   
    <p>This content would probably look better if it was a bit more spaced out and if certain key words or phrases were highlighted - maybe by making them a <em>different colour</em>?</p>
 
+   <script>
+function greetMe(yourName) {
+  alert("Hello " + yourName)
+}
+greetMe("john")
+</script>
 </body>
 </html>
