--- a/module-2/lesson-2/task-2.2.4.html
+++ b/module-2/lesson-2/task-2.2.4.html
@@ -12,7 +12,7 @@
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates corrupti at ducimus delectus, <strong>voluptatibus, aliquam accusantium neque asperiores nesciunt, </strong> nobis qui soluta. Voluptate itaque earum accusamus, consequatur ipsa rerum laboriosam?</p>
 
   <h2>Heading 2</h2>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates corrupti at ducimus delectus, <em>voluptatibus, aliquam accusantium neque asperiores</em>nesciunt, nobis qui soluta. Voluptate itaque earum accusamus, consequatur ipsa rerum laboriosam?</p>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates corrupti at ducimus delectus, <em>voluptatibus, aliquam accusantium neque asperioresnesciunt, </em>nobis qui soluta. Voluptate itaque earum accusamus, consequatur ipsa rerum laboriosam?</p>
 
   <h3>heading 3</h3>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates corrupti at <strong>ducimus delectus, voluptatibus, aliquam accusantium</strong> neque asperiores nesciunt, nobis qui soluta. Voluptate itaque earum accusamus, consequatur ipsa rerum laboriosam?</p>
