--- a/module-2/lesson-3/task-2.3.1.html
+++ b/module-2/lesson-3/task-2.3.1.html
@@ -11,7 +11,36 @@
 <body>
 
   <!-- ADD YOUR CODE BELOW HERE -->
+  <header id="header">
+  <h1>Heading 1</h1>
+  </header>
 
+  <nav>
+    <ul>
+      <li><a href="#"></a>Main Page</li>
+      <li><a href="#"></a>News</li>
+      <li><a href="#"></a>Modern</li>
+    </ul>
+  </nav>
+
+  <main id="main">
+    <h2>heading 2</h2>
+  <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, mollitia? </p>
+  <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, mollitia? </p>
+  </main>
+
+  <div>
+    <h3>div header</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, consectetur.</p>
+  </div>
+
+  <div id="sidebar">
+    <p>sidebar stuff</p>
+  </div>
+
+  <div id="footer">
+    <p>footer stuff</p>
+  </div>
 
   <!-- ADD YOUR CODE ABOVE HERE -->
 
