--- a/module-2/lesson-3/task-2.3.2.html
+++ b/module-2/lesson-3/task-2.3.2.html
@@ -25,7 +25,7 @@
   </aside>
 
   <footer>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non illo quibusdam<span class=".highlight">sit dicta sequi</span>, iusto molestias expedita? Reiciendis eaque vero aspernatur aut dolorum quaerat reprehenderit, aliquam <mark>>omnis officiis accusamus amet!</mark></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non illo quibusdam<span class=".highlight">sit dicta sequi</span>, iusto molestias expedita? Reiciendis eaque vero aspernatur aut dolorum quaerat reprehenderit, aliquam <mark>omnis officiis accusamus amet!</mark></p>
   </footer>
 
   <!-- ADD YOUR CODE ABOVE HERE -->
