--- a/module-2/lesson-3/task-2.3.3.html
+++ b/module-2/lesson-3/task-2.3.3.html
@@ -37,9 +37,11 @@
     
     <!-- ADD YOUR CODE ABOVE HERE -->
   </footer>
-
+  <a href="https://www.google.co.uk/" title="Google">Google</a>
+  <a href="https://github.com/" title="Github">Github</a>
+  <a href="https://www.google.co.uk/" title="Google link 2">Google</a>
   <!-- ADD YOUR CODE ABOVE HERE -->
-
+  
 
   <!-- 
   /** TASK 2.3.2 **/
