--- a/module-2/lesson-3/task-2.3.4.html
+++ b/module-2/lesson-3/task-2.3.4.html
@@ -11,7 +11,17 @@
 <body>
 
     <!-- ADD YOUR CODE BELOW HERE -->
+<header>
+ header
+</header>
 
+<main>
+  main
+</main>
+
+<footer>
+  footer
+</footer>
     <!-- ADD YOUR CODE ABOVE HERE -->
 
 </body>
