--- a/module-2/lesson-3/task-2.3.4.html
+++ b/module-2/lesson-3/task-2.3.4.html
@@ -9,19 +9,21 @@
   <!-- ADD STYLESHEET BELOW HERE -->
 </head>
 <body>
+<div class="container">
 
-    <!-- ADD YOUR CODE BELOW HERE -->
-<header>
- header
-</header>
+  <header>
+  header
+  </header>
 
-<main>
-  main
-</main>
+  <main>
+    main
+  </main>
 
-<footer>
-  footer
-</footer>
+  <footer>
+    footer
+  </footer>
+
+</div>
     <!-- ADD YOUR CODE ABOVE HERE -->
 
 </body>
