--- a/module-2/lesson-4/task-2.4.3.html
+++ b/module-2/lesson-4/task-2.4.3.html
@@ -9,7 +9,7 @@
 <body>
 
     <!-- ADD YOUR CODE BELOW HERE -->
-
+<div class="relative">Relative</div>
     <!-- ADD YOUR CODE ABOVE HERE -->
 
 </body>
@@ -17,7 +17,6 @@
   /** TASK 2.4.3 **/
  
   1. Create a div with the class of relative
-
   2. Use the following code, and add it to your stylesheet.
     - 
     .relative {
