--- a/module-2/lesson-4/task-2.4.4.html
+++ b/module-2/lesson-4/task-2.4.4.html
@@ -9,7 +9,10 @@
 <body>
 
     <!-- ADD YOUR CODE BELOW HERE -->
-
+  <div class="container">
+    <img src="https://cdn.pixabay.com/photo/2021/01/13/16/29/snow-5914604_960_720.jpg" title="snowy land" alt="snow land image">
+    <span><p>Snowy Land</p></span>
+  </div>
     <!-- ADD YOUR CODE ABOVE HERE -->
 
 </body>
