--- a/module-2/lesson-4/task-2.4.5.html
+++ b/module-2/lesson-4/task-2.4.5.html
@@ -8,8 +8,14 @@
 </head>
 <body>
 
-    <!-- ADD YOUR CODE BELOW HERE -->
+      <!-- ADD YOUR CODE BELOW HERE -->
+  <div class="side-bar">
+    <p>Sidebar</p>
+  </div>
 
+  <div class="main">
+    <p>Main</p>
+  </div>
     <!-- ADD YOUR CODE ABOVE HERE -->
 
 </body>
