--- a/module-3/lesson-3/task-3.3.2.html
+++ b/module-3/lesson-3/task-3.3.2.html
@@ -13,6 +13,8 @@
 <!-- ADD YOUR LINK TO YOUR JAVASCRIPT BELOW HERE -->
   
 <!-- ADD YOUR LINK TO YOUR JAVASCRIPT  ABOVE HERE -->
+
+<script src="./scripts/task-3.3.2.js"></script>
 </body>
 
 <!-- 
