--- a/module-3/lesson-4/task-3.4.3.html
+++ b/module-3/lesson-4/task-3.4.3.html
@@ -17,6 +17,7 @@
 <!-- DONT FORGET TO CREATE YOUR JAVASCRIPT FILE IN YOUR SCRIPTS FOLDER  -->
 
 <!-- ADD YOUR LINK TO YOUR JAVASCRIPT  ABOVE HERE -->
+<script src="./scripts/task-3.4.3.js"></script>
 </body>
 
 <!-- 
