--- a/module-3/lesson-5/task-3.5.3a.html
+++ b/module-3/lesson-5/task-3.5.3a.html
@@ -18,7 +18,7 @@
 <!-- ADD YOUR LINK TO YOUR JAVASCRIPT BELOW HERE -->
   
 <!-- DONT FORGET TO CREATE YOUR JAVASCRIPT FILE IN YOUR SCRIPTS FOLDER  -->
-
+<script src="./scripts/tasks-3.5.3a.js"></script>
 <!-- ADD YOUR LINK TO YOUR JAVASCRIPT  ABOVE HERE -->
 </body>
 
