--- a/module-3/lesson-6/task-3.6.3.html
+++ b/module-3/lesson-6/task-3.6.3.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task 3.6.3</title>
+  <style>
+    button {
+      border-radius: 25%;
+    }
+  </style>
 </head>
 <body>
-  
+  <button>Click Here</button>
   <!-- ADD YOUR CODE BELOW HERE -->
 
   <!-- ADD YOUR CODE ABOVE HERE -->
-  
+  <script src="./scripts/task-3.6.3.js"></script>
 </body>
 </html>
