--- a/module-3/lesson-6/task-3.6.4.html
+++ b/module-3/lesson-6/task-3.6.4.html
@@ -8,8 +8,8 @@
 <body>
   
   <!-- ADD YOUR CODE BELOW HERE -->
-
+<a class="disabled" title="Google Seach Bar" href="https://www.google.co.uk/">Go to the Google Search Engine</a>
   <!-- ADD YOUR CODE ABOVE HERE -->
-  
+  <script src="./scripts/task-3.6.4.js"></script>  
 </body>
 </html>
