--- a/module-3/lesson-7/task-3.7.1.html
+++ b/module-3/lesson-7/task-3.7.1.html
@@ -8,14 +8,20 @@
 </head>
 <body>
   <header>
-    <h1>Using JS to Filter</h1>
+    <h1>Using JS to Filter Through Images</h1>
+
+    <div class="search-container">
+      <label for="filter">Search</label>
+      <input type="text" name="filter">
+      <button class="filter-button">filter</button>
+    </div>
 
     <div class="selection-container">
-      <button class="selection" data-class="all">All</button>
-      <button class="selection" data-class="winter">Winter</button>
-      <button class="selection" data-class="spring">Spring</button>
-      <button class="selection" data-class="summer">Summer</button>
-      <button class="selection" data-class="autumn">Autumn</button>
+      <button class="selection active" data-class="all">All</button>
+      <button class="selection active" data-class="winter">Winter</button>
+      <button class="selection active" data-class="spring">Spring</button>
+      <button class="selection active" data-class="summer">Summer</button>
+      <button class="selection active" data-class="autumn">Autumn</button>
     </div>
   </header> <!-- End of Header -->
 
@@ -24,34 +30,43 @@
     <div class="image-selections">
 
       <div class="images" class="winter" data-class="winter">
-        <img title="Winter 1" src="https://images.unsplash.com/photo-1489674267075-cee793167910?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80" alt="">
+        <img title="frozen rain drop" src="https://images.unsplash.com/photo-1489674267075-cee793167910?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80" alt="frozen rain drop">
 
-        <img title="winter 2" src="https://images.unsplash.com/photo-1513267257196-91be473829b3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="">
+        <img title="frozen tree" src="https://images.unsplash.com/photo-1513267257196-91be473829b3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="frozen tree">
 
-        <img title="winter 3" src="https://images.unsplash.com/photo-1457269449834-928af64c684d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="">
+        <img title="snowflake" src="https://images.unsplash.com/photo-1457269449834-928af64c684d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="snowflake">
 
-        <img title="winter 4" src="https://images.unsplash.com/photo-1604537466573-5e94508fd243?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=749&q=80" alt="">
+        <img title="women on a lake" src="https://images.unsplash.com/photo-1604537466573-5e94508fd243?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=749&q=80" alt="women on a lake">
     </div>
 
     <div class="images" data-class="spring">
-        <img title="spring1" src="https://images.unsplash.com/photo-1560258018-c7db7645254e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80" alt="">
-        <img title="spring2" src="https://images.unsplash.com/photo-1470240731273-7821a6eeb6bd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="">
-        <img title="spring3" src="https://images.unsplash.com/photo-1431698194201-465e7d003539?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="">
-        <img title="spring4" src="https://images.unsplash.com/photo-1577862236121-c237c73ef4ed?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="">
+        <img title="green grass" src="https://images.unsplash.com/photo-1560258018-c7db7645254e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80" alt="green grass">
+
+        <img title="meadow" src="https://images.unsplash.com/photo-1470240731273-7821a6eeb6bd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="meadow">
+
+        <img title="start of spring" src="https://images.unsplash.com/photo-1431698194201-465e7d003539?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="start of spring">
+
+        <img title="flowers and sky" src="https://images.unsplash.com/photo-1577862236121-c237c73ef4ed?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="flowers and sky">
     </div>
 
     <div class="images" class="summer" data-class="summer">
-      <img title="summer1" src="https://images.unsplash.com/photo-1473496169904-658ba7c44d8a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="">
-      <img title="summer2" src="" alt="">
-      <img title="summer3" src="" alt="">
-      <img title="summer4" src="" alt="">
+      <img title="Sunglasses" src="https://images.unsplash.com/photo-1473496169904-658ba7c44d8a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Sunglasses">
+
+      <img title="Women in a pool" src="https://images.unsplash.com/photo-1564419431636-fe02f0eff7aa?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=962&q=80" alt="Women in a pool">
+
+      <img title="beach ball" src="https://images.unsplash.com/photo-1498747946579-bde604cb8f44?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80" alt="beach ball">
+
+      <img title="Man with a tan" src="https://images.unsplash.com/photo-1591017403321-dc264d1fd6e5?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" alt="Man with a tan">
     </div>
 
     <div class="images" data-class="autumn">
-      <img title="autumn1" src="https://images.unsplash.com/photo-1574159087201-e2147a95910d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=891&q=80" alt="">
-      <img title="autumn2" src="" alt="">
-      <img title="autumn3" src="" alt="">
-      <img title="autumn4" src="" alt="">
+      <img title="forst with a log" src="https://images.unsplash.com/photo-1574159087201-e2147a95910d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=891&q=80" alt="forst with a log">
+
+      <img title="forest" src="https://images.unsplash.com/photo-1509671658102-fbe78e4f7b60?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="forest">
+
+      <img title="Autumn leaves on a line" src="https://images.unsplash.com/photo-1477414348463-c0eb7f1359b6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Autumn leaves on a line">
+
+      <img title="autumn4" src="https://images.unsplash.com/photo-1459478309853-2c33a60058e7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="coloured leaves">
     </div>
 
     </div> <!-- End of image selections -->
